--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+#title: My Website
+title: personal blog for me
 
 # Your name to show in the footer
 author: Some Person
